--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -91,6 +91,7 @@ file.reference.jersey-json-1.12.jar=web/WEB-INF/libs/jersey-json-1.12.jar
 file.reference.jersey-server-1.12.jar=web/WEB-INF/libs/jersey-server-1.12.jar
 file.reference.jersey-servlet-1.12.jar=web/WEB-INF/libs/jersey-servlet-1.12.jar
 file.reference.jettison-1.1.jar=web/WEB-INF/libs/jettison-1.1.jar
+file.reference.json-20090211.jar=json-20090211.jar
 file.reference.jsoup-1.6.2.jar=web/WEB-INF/libs/jsoup-1.6.2.jar
 file.reference.jsr311-api-1.1.1.jar=web/WEB-INF/libs/jsr311-api-1.1.1.jar
 file.reference.junit-4.5.jar=web/WEB-INF/libs/junit-4.5.jar
@@ -161,7 +162,8 @@ javac.classpath=\
     ${file.reference.wstx-asl-3.2.9.jar}:\
     ${file.reference.xercesImpl-2.10.0.jar}:\
     ${file.reference.xercesImpl-2.7.1.jar}:\
-    ${file.reference.xml-apis-1.4.01.jar}
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.json-20090211.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
